--- a/styles.scss
+++ b/styles.scss
@@ -262,7 +262,7 @@ div.step1 {
   }
   
   button.next-step {
-    margin: 6.5em 0 0 22em;
+    margin: 6em 0 0 22em;
   }
 }
 
@@ -490,6 +490,11 @@ div.step-four {
           color: $CoolGray;
 
         }
+        button.change-button:hover {
+          color: $PurplishBlue;
+          font-weight: 700;   
+        }
+
       }
       
     }
